# RAG_Bench

./: .env.example  .gitignore  README.md  build_dense_index.py  build_graphrag_index.py  build_hippo_index.py  build_hipporag_index.py  build_hypergraph_index.py  build_linear_index.py  build_raptor_index.py  corpus_loader.py  load_parquet_to_chroma.py  load_to_chroma.py  pyproject.toml  rag_clients.py  rebuild_linear_index.py  refined_corpus_6percent.jsonl  requirements.txt  run_benchmark.py  serve_dense.py  serve_graphrag.py  serve_hipporag.py  serve_hypergraph.py  serve_linear.py  serve_raptor.py
.claude/: settings.local.json
.github/workflows/: ci.yml
CorpusIndex/DenseIndex/: corpus.jsonl  dense_index.faiss
CorpusIndex/GraphRAG/: settings.yaml
CorpusIndex/HippoRAG/: openie_results_ner_MiniMax-M2.7.json
CorpusIndex/RaptorIndex/: tree.pkl
GraphR1/: .gitignore  infer_graphr1.sh  openai_client.py  run_graphr1.sh  run_grpo.sh  run_rpp.sh  script_api_GraphRAG.py  script_api_HippoRAG.py  script_api_HypergraphRAG.py  script_api_LinearRAG.py  script_api_RAPTOR.py  update_port_config.py
GraphR1/GraphRAG/: local_search.py  pyproject.toml  script_api_GraphRAG.py  test.sh  test_api.py  (+1 more)
GraphSearch/: .gitignore  README.md  config.py  eval.py  eval_results_bamboogle_dense.json  eval_results_bamboogle_hipporag.json  eval_results_bamboogle_hypergraphrag.json  eval_results_bamboogle_linearrag.json  eval_results_bamboogle_raptor.json  eval_results_dense.json  eval_results_hipporag.json  eval_results_hypergraph.json  eval_results_linear.json  eval_results_raptor.json  nohup.out  pipeline.py  requirements.txt  run_universal.SBATCH  run_universal.sh  submit_hippo_all.sh  submit_hippo_hotpotqa_2k_4k.sh  test.sbatch  utils.py
Search-R1/: run_eval_vllm.py
Search-o1/: README.md  requirements.txt  run_search_o1.sh  run_search_o1_graphrag.sh
dense_index/: corpus.jsonl  dense_index.faiss
docs/: CERTIFICATES.md  TEI.md  legacy-conda.md
raptor_index/: tree.pkl
test_graphrag/: settings.yaml
(+827 files in other folders)
